; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/dvm/extr_testmode.c_iwl_testmode_alloc_reply.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wireless/iwlwifi/dvm/extr_testmode.c_iwl_testmode_alloc_reply.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.iwl_op_mode = type { i32 }
%struct.iwl_priv = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sk_buff* (%struct.iwl_op_mode*, i32)* @iwl_testmode_alloc_reply to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sk_buff* @iwl_testmode_alloc_reply(%struct.iwl_op_mode* %0, i32 %1) #0 {
  %3 = alloca %struct.iwl_op_mode*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.iwl_priv*, align 8
  store %struct.iwl_op_mode* %0, %struct.iwl_op_mode** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.iwl_op_mode*, %struct.iwl_op_mode** %3, align 8
  %7 = call %struct.iwl_priv* @IWL_OP_MODE_GET_DVM(%struct.iwl_op_mode* %6)
  store %struct.iwl_priv* %7, %struct.iwl_priv** %5, align 8
  %8 = load %struct.iwl_priv*, %struct.iwl_priv** %5, align 8
  %9 = getelementptr inbounds %struct.iwl_priv, %struct.iwl_priv* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.sk_buff* @cfg80211_testmode_alloc_reply_skb(i32 %12, i32 %13)
  ret %struct.sk_buff* %14
}

declare dso_local %struct.iwl_priv* @IWL_OP_MODE_GET_DVM(%struct.iwl_op_mode*) #1

declare dso_local %struct.sk_buff* @cfg80211_testmode_alloc_reply_skb(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
